--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 </nav>
 
 <div class="logo">
-  <img src="logo-lekaod.png" alt="โลโก้เลขาโอ๊ต" />
+  <img src="logo-lekaod.png" alt="" />
 </div>
 
 <div class="section">
