--- a/index.html
+++ b/index.html
@@ -76,11 +76,11 @@
   </div>
 </div>
 
-  <div class="contact-btns" style="text-align:center; margin-top:1rem;">
-    <a href="https://line.me/R/ti/p/@lekaod" target="_blank">💬 LINE: @lekaod</a>
-    <a href="https://www.facebook.com/profile.php?id=61576273741190" target="_blank">📘 เพจ Facebook</a>
-    <a href="https://www.facebook.com/profile.php?id=61575943423244" target="_blank">👤 โปรไฟล์ส่วนตัว</a>
-  </div>
+<div class="contact-btns" style="text-align:center; margin-top:1rem;">
+  <a href="tel:0618191354" target="_blank">📞 โทร: 061-819-1354</a>
+  <a href="https://line.me/ti/p/u9ENtn-7AU" target="_blank">💬 LINE อัตโนมัติ</a>
+  <a href="https://www.facebook.com/profile.php?id=61576273741190" target="_blank">📘 เพจ Facebook</a>
+  <a href="https://www.facebook.com/profile.php?id=61575943423244" target="_blank">👤 โปรไฟล์ส่วนตัว</a>
 </div>
 
 <footer>
